--- a/www/css/main.css
+++ b/www/css/main.css
@@ -73,13 +73,13 @@
 .ui-header ul{background: #161618;}
 .ui-header ul.menu{background: transparent;}
 .ui-header ul li{float: left;}
-.ui-header a{border-radius: 0 0 0 0;margin-bottom: 8px;-moz-box-shadow: 0px 0px 0px rgba(0,0,0,.2);-webkit-box-shadow: 0px 0px 0px rgba(0,0,0,.2); height: 22px;width: 15px;border: 0;box-shadow: none;text-indent: -99999px;}
+.ui-header a{border-radius: 0 0 0 0;margin-bottom: 8px;-moz-box-shadow: 0px 0px 0px rgba(0,0,0,.2);-webkit-box-shadow: 0px 0px 0px rgba(0,0,0,.2); height: 24px;width: 16px;border: 0;box-shadow: none;text-indent: -99999px;}
 .ui-header .menu a{margin-top: 18px;}
 .ui-header .back{float: left;}
 .ui-header .menu .back{width: 30%;}
 .ui-header .back .volver{background: url("../img/bg_volver.png") no-repeat scroll center top transparent; background-size:40px;}
 .ui-header .back .info{background: url("../img/bg_info.png") no-repeat scroll center top transparent; background-size:40px;}
-.ui-header .page{text-align: center;width: 73%;margin-top: 0.5em;color: #fff;font-size: 20px;text-shadow: 0 0 0;}
+.ui-header .page{text-align: center;width: 72%;margin-top: 0.5em;color: #fff;font-size: 20px;text-shadow: 0 0 0;}
 .ui-header .menu .page{margin-top: 3px;width: 40%;}
 .ui-header .page img{width: 68px;}
 .ui-header .setting{float:right}
@@ -137,14 +137,16 @@
 .ui-content .content_top .imagen img{width: 100%;display: block;}
 .ui-content .content_top .title{margin: 13px 4px;text-shadow: 0 2px 2px #000;width: 160px;}
 .ui-content .content_top .title h2{font-size: 35px;line-height: 22px;color: #fc039b;padding-top: 8px;width: 100%;overflow: hidden;white-space: nowrap;}
-.ui-content .content_top .title a{color: #fff;font-size: 18px;background: url("../img/arrow_bottom.png") no-repeat scroll right bottom transparent;padding-right: 35px;background-size: 30px;display: block;line-height: 18px;}
+.ui-content .content_top .title a{color: #fff;font-size: 18px;padding-right: 35px;display: block;line-height: 18px;}
+.ui-content .content_top .title a.up{background: url("../img/arrow_top.png") no-repeat scroll right bottom transparent;background-size: 30px;}
+.ui-content .content_top .title a.down{background: url("../img/arrow_bottom.png") no-repeat scroll right bottom transparent;background-size: 30px;}
 .ui-content .content_top .title a.sub{padding-right: 0;}
 .ui-content .content_middle{margin: 0 10px;background: url("../img/bg_button.png") repeat scroll 0 0 transparent;border-radius: 40px;border: 1px solid #4f4f4f;padding: 18px 20px 10px;color: #fff;margin-top: -16px;}
 .ui-content .content_middle p{line-height: 14px;text-shadow: 0 0 0;letter-spacing: 1px;text-align: justify;font-size: 14px;}
 .ui-content .content_middle b{color: #fc039b;text-shadow: 0 0 0;}
-.ui-content .content_middle .mas_informacion{margin-top: 10px;}
+.ui-content .content_middle .mas_informacion{padding-top: 10px;}
 .ui-content .content_middle .mas_informacion p{text-align: left;font-size: 13px;font-family: HelveticaLTStdLight;letter-spacing: 0;text-shadow: 0 0 0;}
-.ui-content .content_bottom{margin: 0 25px;}
+.ui-content .content_bottom{padding: 0 25px;}
 .ui-content .custom .content_middle, .ui-content .custom2 .content_middle{padding-bottom: 18px;}
 .ui-content .custom .content_bottom{margin: 0 65px;}
 .ui-content .custom2 .content_bottom{margin: 0 100px;}
