--- a/www/css/main.css
+++ b/www/css/main.css
@@ -95,7 +95,7 @@
 /* NAVIGATION OPTIONS */
 .ui-navbar .nav_options a.ui-btn{font-family: windows_objectregular;color: #fb059b;font-size: 17px;font-weight: normal;text-shadow: 0 0 2px #fc039b;margin-top: -2px;}
 .ui-navbar .nav_options .ui-btn-icon-top{padding-top: 3em;padding-left: 0;padding-right: 0;padding-bottom:0;background: transparent;border: none;}
-.ui-navbar .nav_options .ui-btn-icon-top:after{left: 44%;margin-left: -15px;width: 40px;height: 40px;}
+.ui-navbar .nav_options .ui-btn-icon-top:after{left: 44%;margin-left: -15px;width: 41px;height: 41px;}
 .ui-navbar .nav_options .ui-btn-icon-top.icon_mapa:after{background: url("../img/bg_ciudades.png") no-repeat scroll 0 0 transparent;background-size: 40px;background-position: 0;}
 .ui-navbar .nav_options .ui-btn-icon-top.icon_tickets:after{background: url("../img/bg_tickets.png") no-repeat scroll 0 0 transparent;background-size: 40px;background-position: 0;}
 .ui-navbar .nav_options .ui-btn-icon-top.icon_sesiones:after{background: url("../img/bg_sesiones.png") no-repeat scroll 0 0 transparent;background-size: 40px;background-position: 0;}
@@ -148,8 +148,8 @@
 .ui-content .content_middle .mas_informacion p{text-align: left;font-size: 13px;font-family: HelveticaLTStdLight;letter-spacing: 0;text-shadow: 0 0 0;}
 .ui-content .content_bottom{padding: 0 25px;}
 .ui-content .custom .content_middle, .ui-content .custom2 .content_middle{padding-bottom: 18px;}
-.ui-content .custom .content_bottom{margin: 0 65px;}
-.ui-content .custom2 .content_bottom{margin: 0 100px;}
+.ui-content .custom .content_bottom{padding: 0 65px;}
+.ui-content .custom2 .content_bottom{padding: 0 100px;}
 .ui-content.slider .owl-theme .owl-controls{position: absolute;top: 0;width: 100%;}
 
 /* SESIONES */
@@ -158,10 +158,10 @@
 #sesiones .ui-listview li a{display: block;text-align: center;}
 #sesiones .ui-listview li img{width: 172px;}
 
-/* LOCAL GOOGLE MAP */
-#local_google_map { height: 100% }
-#local_google_map .ui-content { height: 80%; padding: 0; margin-top: 18px;margin-bottom: 15px;}
-#local_google_map #map_canvas { height: 100% }
+/* GOOGLE MAP */
+#google_map { height: 100% }
+#google_map .ui-content { height: 80%; padding: 0; margin-top: 18px;margin-bottom: 15px;}
+#google_map #map_canvas { height: 100% }
 
 /* PORTRAIT IPHONE 5 */
 
